--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ div.btnbg {
 			<div class="col-md-6 col-sm-7 col-md-push-3 col-sm-push-2"style="opacity: 0.6; padding: 31px;">
 				<form action="http://caup.cn/search?q=" target="_blank">
 					<div class="input-group input-group-lg">
-					  <input type="text" class="form-control" name="q" placeholder="为小众而搜索">
+					  <input type="text" class="form-control" name="q" placeholder="萌搜 为小众而搜索">
 					  <span class="input-group-btn">
 						<button class="btn btn-default" type="button submit">Go!</button>
 					  </span>
